--- a/package.json
+++ b/package.json
@@ -6,16 +6,27 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint . --ext .js"
   },
   "dependencies": {
+    "@expo-google-fonts/lato": "^0.2.3",
+    "@expo-google-fonts/oswald": "^0.2.3",
+    "@react-native/eslint-config": "^0.72.2",
+    "eslint": "^8.46.0",
     "expo": "~49.0.6",
+    "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
+    "prettier": "^3.0.1",
     "react": "18.2.0",
-    "react-native": "0.72.3"
+    "react-native": "0.72.3",
+    "react-native-paper": "^5.10.1",
+    "react-native-svg": "^13.11.0",
+    "styled-components": "^6.0.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "eslint-plugin-prettier": "^5.0.0"
   },
   "private": true
 }
