--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@expo-google-fonts/lato": "^0.2.3",
     "@expo-google-fonts/oswald": "^0.2.3",
     "@react-native/eslint-config": "^0.72.2",
+    "@react-navigation/bottom-tabs": "^6.5.9",
+    "@react-navigation/native": "^6.1.8",
     "eslint": "^8.46.0",
     "expo": "~49.0.6",
     "expo-font": "~11.4.0",
@@ -21,6 +23,8 @@
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-paper": "^5.10.1",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-native-svg": "^13.11.0",
     "styled-components": "^6.0.7"
   },
