adding service/context layer and mocks

--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@expo-google-fonts/lato": "^0.2.3",
     "@expo-google-fonts/oswald": "^0.2.3",
+    "@expo/webpack-config": "^19.0.0",
     "@react-native/eslint-config": "^0.72.2",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/native": "^6.1.8",
+    "camelize": "^1.0.1",
     "eslint": "^8.46.0",
     "expo": "~49.0.6",
     "expo-font": "~11.4.0",
@@ -26,9 +28,8 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
-    "styled-components": "^6.0.7",
     "react-native-web": "~0.19.6",
-    "@expo/webpack-config": "^19.0.0"
+    "styled-components": "^6.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
